--- a/project/linux/catcake/makefile
+++ b/project/linux/catcake/makefile
@@ -23,8 +23,8 @@
 
 BASE_DIR = ../../..
 
-CXX         = g++
-CXXFLAGS    = -O2 -fno-strict-aliasing -Wall -s
+CXX         = clang++
+CXXFLAGS    = -Os -fno-strict-aliasing -Wall -s
 DEFINES     = -DNDEBUG -DCK_LINUX
 INCLUDES    = -I$(BASE_DIR)/include -I$(BASE_DIR)/source -I$(BASE_DIR)/project/include/zlib -I$(BASE_DIR)/project/include/libpng -I$(BASE_DIR)/project/include/freetype
 
