--- a/project/linux/catcake/makefile
+++ b/project/linux/catcake/makefile
@@ -26,7 +26,8 @@ BASE_DIR = ../../..
 CXX         = clang++
 CXXFLAGS    = -Os -fno-strict-aliasing -Wall -s
 DEFINES     = -DNDEBUG -DCK_LINUX
-INCLUDES    = -I$(BASE_DIR)/include -I$(BASE_DIR)/source -I$(BASE_DIR)/project/include/zlib -I$(BASE_DIR)/project/include/libpng -I$(BASE_DIR)/project/include/freetype
+#INCLUDES    = -I$(BASE_DIR)/include -I$(BASE_DIR)/source -I$(BASE_DIR)/project/include/zlib -I$(BASE_DIR)/project/include/libpng -I$(BASE_DIR)/project/include/freetype
+INCLUDES    = -I$(BASE_DIR)/include -I$(BASE_DIR)/source -I$(BASE_DIR)/project/include/zlib -I$(BASE_DIR)/project/ -I$(BASE_DIR)/project/include/freetype
 
 AR          = ar
 ARFLAGS     = rs
